--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "deploy": "push-dir --dir=dist --branch=gh-pages --cleanup"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "nuxt": "^2.0.0"
   },
   "devDependencies": {
