--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "deploy": "push-dir --dir=dist --branch=gh-pages --cleanup"
   },
   "dependencies": {
+    "@nuxtjs/axios": "^5.12.0",
+    "@nuxtjs/pwa": "^3.0.0-beta.20",
     "axios": "^0.19.2",
     "nuxt": "^2.0.0"
   },
